[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/message.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/font_score.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 42
outline_size = 2
outline_color = Color( 0.203922, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 1
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 3 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -200.0
margin_right = 92.0
margin_bottom = 133.5
texture = ExtResource( 1 )

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -120.0
margin_right = 90.0
margin_bottom = 50.0
custom_constants/separation = 20

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "SCORE: 0"
align = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 62.0
margin_right = 200.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "Best : 0"
align = 1

[node name="Restart" type="Button" parent="GameOverMenu/VBoxContainer"]
margin_top = 124.0
margin_right = 200.0
margin_bottom = 174.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 2 )
text = "RESTART"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="GameOverMenu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
